@@ -50,11 +50,6 @@
 #      endif /* ACE_HAS_USING_KEYWORD */
 #      define ACE_HAS_STANDARD_CPP_LIBRARY 1
 #      define ACE_USES_STD_NAMESPACE_FOR_STDCPP_LIB 1
-#      if !defined (__TEMPINC__)
-         // Visual Age C++ 5 without -qtempinc is asking for explicit
-         // template instantiation.
-#        define ACE_HAS_EXPLICIT_TEMPLATE_INSTANTIATION
-#      endif /* __TEMPINC__ */
 #    endif /* __IBMCPP__ >= 500 */
 #  endif /* __IBMCPP__ */
 
